objects/Roof_Information__c.object
<CustomObject>
    <fields>
        <fullName>Attic_Access_Picture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attic Access Picture (pull back of attic hatch entry)</description>
        <inlineHelpText>Attic Access Picture (pull back of attic hatch entry)</inlineHelpText>
        <label>Attic Access Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attic_Pic_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attic Pic 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attic_Pic_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attic Pic 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Condition (Ridge Caps, Old Comp, Broken Tiles)</description>
        <label>Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_Between_Struts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Distance Between Struts (If Applicable) (Show Ruler Measurement)</description>
        <inlineHelpText>Distance Between Struts (If Applicable) (Show Ruler Measurement)</inlineHelpText>
        <label>Distance Between Struts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_from_Ridge_Beam_to_Ceiling_Jois__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distance from Ridge Beam to Ceiling Jois</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_to_the_Ground__c</fullName>
        <label>Distance to the Ground:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_rafters_run_perpendicular_to_the_ridg__c</fullName>
        <label>Do rafters run perpendicular to the ridg</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exposed_Rafter_Tails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exposed Rafter Tails (Show Ruler Measurement)</description>
        <inlineHelpText>Exposed Rafter Tails (Show Ruler Measurement)</inlineHelpText>
        <label>Exposed Rafter Tails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foam_Insulation_below_the_roof_material__c</fullName>
        <label>Foam Insulation below the roof material:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Roof Information</relationshipLabel>
        <relationshipName>Roof_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Framing_Detail_Samples_Pic_of_Amit_s_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Framing Detail Samples / Pic of Amit&apos;s Chart</description>
        <inlineHelpText>Framing Detail Samples / Pic of Amit&apos;s Chart</inlineHelpText>
        <label>Framing Detail Samples / Pic of Amit&apos;s C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Comp_How_many_layers__c</fullName>
        <label>If Comp, How many layers?:</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inclinometer_on_Rafter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inclinometer on Rafter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insulation_below_the_roof_material_pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insulation below the roof material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSP_Sub_Panel_Burn_Marks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP/Sub Panel Burn Marks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <label>Number of Stories:</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overhang_Gable_Show_Measurement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overhang / Gable Show Measurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pic_of_Comp_Layers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pic of Comp Layers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture_of_Scale_Weight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picture of Scale Weight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture_of_Tile_Label_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picture of Tile Label Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poor_Underpayment__c</fullName>
        <label>Poor Underpayment :</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rafter_Spacing_cb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rafter Spacing (Show Ruler Measurement)</description>
        <inlineHelpText>Rafter Spacing (Show Ruler Measurement)</inlineHelpText>
        <label>Rafter Spacing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Notes__c</fullName>
        <label>Red Flag Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Pic1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Flag Pic 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Pic2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Flag Pic2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Pic3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Flag Pic3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_1_Access_Ladder_Size__c</fullName>
        <label>Roof 1 Access / Ladder Size:</label>
        <picklist>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Attic_Type__c</fullName>
        <label>Roof Attic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Truss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stick Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaulted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purlin</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Issues_Potential_re_roo__c</fullName>
        <description>Roof Condition Issues - Potential re-roof?</description>
        <inlineHelpText>Roof Condition Issues - Potential re-roof?</inlineHelpText>
        <label>Roof Condition Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Notes__c</fullName>
        <label>Roof Condition Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Passes__c</fullName>
        <description>Roof Condition Passes? If no, explain(see notes)</description>
        <inlineHelpText>Roof Condition Passes? If no, explain(see notes)</inlineHelpText>
        <label>Roof Condition Passes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Condition Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Pic_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Condition Pic #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Condition_Pic_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Condition Pic #2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Drawing_Measurements_Upload_Pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Drawing Measurements Upload Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Drawing_Measurements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Drawing Measurements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Exposed_Rafters__c</fullName>
        <label>Roof Exposed Rafters?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Framing_Details_Draw_on_Pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Framing Details/ Draw on Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Ladder_Location_Setup_Pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Ladder Location Setup Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <label>Roof Material:</label>
        <picklist>
            <picklistValues>
                <fullName>Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light weight tile (w shape)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light weight (Flat)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light weight (S tile)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curved Tile (W Shape)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Tile Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Rolled Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Tile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Notes_if_needed__c</fullName>
        <label>Roof Notes if needed:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roof_Obstruction_Measurements_X_Y__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Obstruction Measurements (X/Y)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Pic_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Pic 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Pic_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Pic 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Pic_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Pic 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Rafter_Dimensions__c</fullName>
        <label>Roof Rafter Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Working_Space_in_Attic__c</fullName>
        <label>Roof Working Space in Attic</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Access_Average_Roof_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Access Average Roof 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standing_Seam_Pic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standing Seam Pic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tile_Hook_Mock_Up_Picture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tile Hook Mock-Up Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tile_Hook_Profile__c</fullName>
        <label>Tile Hook Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Low profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High profile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trenching_Required__c</fullName>
        <label>Trenching Required?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Underpayment_Quality_Scratch_Test_Pic_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Underpayment Quality Scratch Test Pic 1</description>
        <inlineHelpText>Underpayment Quality Scratch Test Pic 1</inlineHelpText>
        <label>Underpayment Quality Scratch Test Pic 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underpayment_Quality_Scratch_Test_Pic_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underpayment Quality Scratch Test Pic 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Existing_Grounding__c</fullName>
        <label>Upgrade Existing Grounding?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weigh_Cement_Tile_indicate_weight__c</fullName>
        <label>Weigh Cement Tile, indicate weight:</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;9lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;9lbs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_Roof_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Roof Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>have_fire_sprinklers_installed__c</fullName>
        <description>Does the home have fire sprinklers installed?</description>
        <inlineHelpText>Does the home have fire sprinklers installed?</inlineHelpText>
        <label>Have fire sprinklers installed? :</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Roof Information</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Roof Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roof Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>